[gd_scene load_steps=5 format=3 uid="uid://b08cklx0ohmms"]

[ext_resource type="Script" path="res://Menu.gd" id="1_sispn"]
[ext_resource type="Texture2D" uid="uid://dbv12i7f5jec8" path="res://Art/Background DALLE.png" id="2_64qis"]
[ext_resource type="FontFile" uid="uid://bhpv1c7hykjgo" path="res://Art/fonts/Xolonium-Regular.ttf" id="3_0e0jw"]

[sub_resource type="Theme" id="Theme_6lcva"]
default_font = ExtResource("3_0e0jw")
default_font_size = 60

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sispn")

[node name="BackgroundDalle" type="Sprite2D" parent="."]
position = Vector2(634, 300)
scale = Vector2(1.4, 1.4)
texture = ExtResource("2_64qis")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 95.0
offset_top = 220.0
offset_right = 426.0
offset_bottom = 495.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
modulate = Color(1, 0.698039, 0.133333, 1)
layout_mode = 2
theme = SubResource("Theme_6lcva")

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_0e0jw")
text = "Play"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
